@@ -53,7 +53,7 @@ h3, h4, h5, h6 {
   background: white;
 }
 #content ul {
-  list-style-image: url("/bullet.png");
+  list-style-image: url("/++theme++startup_classic/img/bullet.png");
   list-style-type: square;
   margin: 0.5em 0 0 1.5em;
 }
