@@ -4,6 +4,8 @@ Changelog
 1.0 (unreleased)
 ------------------
 
+- Fixed GET '/bullet.png' 404 (Not Found) Error
+  [macagua]
 - Fixed GET '/search_icon.png' 404 (Not Found) Error
   [macagua]
 - Fixed GET '/input_background.png' 404 (Not Found) Error
